# sara_msgs

./: CMakeLists.txt  CONTRIBUTING.md  Jenkinsfile  LICENSE.md  README.md  package.xml
msg/: BodyPart.msg  Bodypart.msg  BoundingBox2D.msg  BoundingBox3D.msg  BoundingBoxes2D.msg  BoundingBoxes3D.msg  Entity.msg  FaceMsg.msg  Faces.msg  GenderAgePrediction.msg  Person.msg  PointCloud.msg  PointClouds.msg  Pose.msg  Poses.msg
